词袋模型-单词转化为特征向量

--- a/learnsklearn/OpinionMining.ipynb
+++ b/learnsklearn/OpinionMining.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -96,14 +96,14 @@
      "output_type": "stream",
      "text": [
       "0% [##############################] 100% | ETA: 00:00:00\n",
-      "Total time elapsed: 00:11:34\n"
+      "Total time elapsed: 00:03:40\n"
      ]
     }
    ],
    "source": [
     "for s in ('test','train'):\n",
     "    for l in ('pos','neg'):\n",
-    "        path = '/Users/fannian/tool_data/aclImdb/%s/%s' % (s,l)\n",
+    "        path = '/home/fannian/too_data/aclImdb/%s/%s' % (s,l)\n",
     "        for file in os.listdir(path):\n",
     "            with open(os.path.join(path,file), 'r') as infile:\n",
     "                txt = infile.read()\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,11 +148,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/home/fannian/tool_data/outdata/movie_data.csv',index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 词袋模型-将单词转换为特征向量"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('/Users/fannian/tool_data/outdata/movie_data.csv',index = False)"
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = CountVectorizer()#词频：训练后生成一个词频字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs = np.array([\n",
+    "    'The sun is shining',\n",
+    "    'The weather is sweet',\n",
+    "    'The sun is shining and the weather is sweet'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bag = count.fit_transform(docs)#生成特征词向量的压缩行稀疏矩阵"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'the': 5, 'sun': 3, 'is': 1, 'shining': 2, 'weather': 6, 'sweet': 4, 'and': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count.vocabulary_) #返回一个词频字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 1 1 0 1 0]\n",
+      " [0 1 0 0 1 1 1]\n",
+      " [1 2 1 1 1 2 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bag.toarray()) #返回词向量的array形式"
    ]
   }
  ],
