更新 数据预处理-特征缩放、L1正则特征选择

--- a/learnsklearn/数据预处理-winedataset.ipynb
+++ b/learnsklearn/数据预处理-winedataset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "4             4.32  1.04                          2.93      735  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,6 +264,297 @@
    "metadata": {},
    "source": [
     "# 特征缩放"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mms = MinMaxScaler() #特征归一化0~1，特征标准化-1~1，一般来说标准化呈正态分布，更新权重更方便"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_norm = mms.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test_norm = mms.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stdsc = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_std = stdsc.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test_std = stdsc.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.83947368, 0.64229249, 0.52941176, 0.10638298, 0.68493151,\n",
+       "        0.69655172, 0.56962025, 0.13207547, 0.65354331, 0.32593857,\n",
+       "        0.2991453 , 0.88627451, 0.3381295 ],\n",
+       "       [0.31052632, 0.08893281, 0.03267974, 0.29787234, 1.        ,\n",
+       "        0.3       , 0.19831224, 0.01886792, 0.81889764, 0.13395904,\n",
+       "        0.63247863, 0.70588235, 0.30791367],\n",
+       "       [0.21315789, 0.42490119, 0.34640523, 0.36170213, 0.46575342,\n",
+       "        0.25517241, 0.20675105, 0.56603774, 0.20866142, 0.1168942 ,\n",
+       "        0.35897436, 0.49019608, 0.15107914],\n",
+       "       [0.65      , 0.47035573, 0.60130719, 0.68085106, 0.61643836,\n",
+       "        0.14482759, 0.25949367, 0.16981132, 0.32677165, 0.62457338,\n",
+       "        0.04273504, 0.01176471, 0.15107914],\n",
+       "       [0.71578947, 0.19565217, 0.46405229, 0.25531915, 0.15068493,\n",
+       "        0.55862069, 0.51054852, 0.30188679, 0.54724409, 0.36860068,\n",
+       "        0.52136752, 0.63921569, 0.74100719]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_norm[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.42262271,  1.38799354,  0.5100237 , -1.88704901,  2.04812621,\n",
+       "         1.07444098,  0.96290566, -1.33529508,  0.90011585,  0.05779626,\n",
+       "        -0.35491152,  1.32889244,  0.02112007],\n",
+       "       [-0.96894942, -1.06435676, -2.41361583, -0.83394403,  3.69587118,\n",
+       "        -0.76908307, -0.76739102, -1.81407076,  1.67113614, -0.97520541,\n",
+       "         1.35630695,  0.65162274, -0.10444307],\n",
+       "       [-1.40918907,  0.42457021, -0.56710665, -0.48290903,  0.90186883,\n",
+       "        -0.97748144, -0.72806609,  0.5000117 , -1.17429588, -1.06702778,\n",
+       "        -0.04776975, -0.15815625, -0.75617558],\n",
+       "       [ 0.56594015,  0.62601327,  0.93318206,  1.27226595,  1.68992078,\n",
+       "        -1.49046204, -0.48228531, -1.17570318, -0.6235671 ,  1.66468774,\n",
+       "        -1.67123343, -1.95439328, -0.75617558],\n",
+       "       [ 0.86339937, -0.59140349,  0.12533429, -1.06796736, -0.74587614,\n",
+       "         0.43321522,  0.68763119, -0.61713156,  0.40445995,  0.28735218,\n",
+       "         0.78590079,  0.40132742,  1.6952953 ]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_std[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 特征选择"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### L1正则化满足数据稀疏化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = LogisticRegression(penalty='l1',C=1.0,multi_class='auto',solver='liblinear')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='auto',\n",
+       "          n_jobs=None, penalty='l1', random_state=None, solver='liblinear',\n",
+       "          tol=0.0001, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr.fit(X_train_std,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('Training accuracy:',lr.score(X_train_std,y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test accuracy: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('test accuracy:',lr.score(X_test_std,y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.18717509, -1.13245193, -2.52229744])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr.intercept_ #获得截距项"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.13436625,  0.        ,  0.79723613, -1.37919061,  0.        ,\n",
+       "         0.        ,  0.59539487,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  1.0694832 ,  2.32098364],\n",
+       "       [-1.35875765, -0.32683693, -1.14239746,  0.6864539 ,  0.        ,\n",
+       "         0.06930373,  0.67975579,  0.10279708,  0.        , -1.90581578,\n",
+       "         0.90729652,  0.        , -2.07025126],\n",
+       "       [ 0.13821619,  0.1311182 ,  0.42639177,  0.        ,  0.        ,\n",
+       "         0.        , -2.38590563,  0.        ,  0.        ,  1.47293043,\n",
+       "        -0.86049005, -0.60210613,  0.        ]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr.coef_ #获得权重系数，有三个权重是针对多分类的情况所采用的一对多方法OvR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 正则化效果图（省略）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 序列特征选择算法SBS"
    ]
   },
   {
