--- a/learnsklearn/数据预处理-winedataset.ipynb
+++ b/learnsklearn/数据预处理-winedataset.ipynb
@@ -340,30 +340,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.83947368, 0.64229249, 0.52941176, 0.10638298, 0.68493151,\n",
-       "        0.69655172, 0.56962025, 0.13207547, 0.65354331, 0.32593857,\n",
-       "        0.2991453 , 0.88627451, 0.3381295 ],\n",
-       "       [0.31052632, 0.08893281, 0.03267974, 0.29787234, 1.        ,\n",
-       "        0.3       , 0.19831224, 0.01886792, 0.81889764, 0.13395904,\n",
-       "        0.63247863, 0.70588235, 0.30791367],\n",
-       "       [0.21315789, 0.42490119, 0.34640523, 0.36170213, 0.46575342,\n",
-       "        0.25517241, 0.20675105, 0.56603774, 0.20866142, 0.1168942 ,\n",
-       "        0.35897436, 0.49019608, 0.15107914],\n",
-       "       [0.65      , 0.47035573, 0.60130719, 0.68085106, 0.61643836,\n",
-       "        0.14482759, 0.25949367, 0.16981132, 0.32677165, 0.62457338,\n",
-       "        0.04273504, 0.01176471, 0.15107914],\n",
-       "       [0.71578947, 0.19565217, 0.46405229, 0.25531915, 0.15068493,\n",
-       "        0.55862069, 0.51054852, 0.30188679, 0.54724409, 0.36860068,\n",
-       "        0.52136752, 0.63921569, 0.74100719]])"
+       "array([[0.35263158, 0.03952569, 0.        , 0.        , 0.19565217,\n",
+       "        0.34482759, 0.04852321, 0.26923077, 0.00315457, 0.05716724,\n",
+       "        0.43103448, 0.2014652 , 0.16546763],\n",
+       "       [0.47894737, 0.5       , 0.65240642, 0.58762887, 0.39130435,\n",
+       "        0.23103448, 0.05485232, 0.88461538, 0.17350158, 0.3668942 ,\n",
+       "        0.27586207, 0.30769231, 0.20143885],\n",
+       "       [0.43157895, 0.04743083, 0.47058824, 0.3814433 , 0.31521739,\n",
+       "        0.42068966, 0.33755274, 0.30769231, 0.33123028, 0.11433447,\n",
+       "        0.5862069 , 0.69230769, 0.11510791],\n",
+       "       [0.71315789, 0.18379447, 0.47593583, 0.29896907, 0.52173913,\n",
+       "        0.55862069, 0.54008439, 0.13461538, 0.38170347, 0.38993174,\n",
+       "        0.31896552, 0.70695971, 0.55395683],\n",
+       "       [0.34210526, 0.04940711, 0.31550802, 0.21649485, 0.7173913 ,\n",
+       "        0.31724138, 0.3185654 , 0.40384615, 0.74132492, 0.18088737,\n",
+       "        0.43965517, 0.38095238, 0.33093525]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,30 +374,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.42262271,  1.38799354,  0.5100237 , -1.88704901,  2.04812621,\n",
-       "         1.07444098,  0.96290566, -1.33529508,  0.90011585,  0.05779626,\n",
-       "        -0.35491152,  1.32889244,  0.02112007],\n",
-       "       [-0.96894942, -1.06435676, -2.41361583, -0.83394403,  3.69587118,\n",
-       "        -0.76908307, -0.76739102, -1.81407076,  1.67113614, -0.97520541,\n",
-       "         1.35630695,  0.65162274, -0.10444307],\n",
-       "       [-1.40918907,  0.42457021, -0.56710665, -0.48290903,  0.90186883,\n",
-       "        -0.97748144, -0.72806609,  0.5000117 , -1.17429588, -1.06702778,\n",
-       "        -0.04776975, -0.15815625, -0.75617558],\n",
-       "       [ 0.56594015,  0.62601327,  0.93318206,  1.27226595,  1.68992078,\n",
-       "        -1.49046204, -0.48228531, -1.17570318, -0.6235671 ,  1.66468774,\n",
-       "        -1.67123343, -1.95439328, -0.75617558],\n",
-       "       [ 0.86339937, -0.59140349,  0.12533429, -1.06796736, -0.74587614,\n",
-       "         0.43321522,  0.68763119, -0.61713156,  0.40445995,  0.28735218,\n",
-       "         0.78590079,  0.40132742,  1.6952953 ]])"
+       "array([[-0.8344164 , -1.21356355, -3.80004953, -2.6386402 , -0.8228463 ,\n",
+       "        -0.48832793, -1.38930938, -0.67566145, -2.00126641, -1.41686674,\n",
+       "         0.42347195, -1.05244897, -0.76922214],\n",
+       "       [-0.24604459,  0.80673481,  0.81109584,  0.77615591,  0.36897261,\n",
+       "        -1.02104931, -1.3599811 ,  1.83466125, -1.07209709,  0.21841546,\n",
+       "        -0.37321499, -0.64923072, -0.60690585],\n",
+       "       [-0.46668402, -1.17888032, -0.47397746, -0.42201817, -0.09451252,\n",
+       "        -0.13318035, -0.04998423, -0.51876628, -0.21175513, -1.11503779,\n",
+       "         1.22015889,  0.81069743, -0.99646495],\n",
+       "       [ 0.8448948 , -0.58059454, -0.43618119, -0.90128779,  1.16351855,\n",
+       "         0.51254254,  0.88852098, -1.22479454,  0.06355429,  0.34004802,\n",
+       "        -0.15191307,  0.86631374,  0.98379381],\n",
+       "       [-0.88344739, -1.17020951, -1.57006939, -1.38055742,  2.35533746,\n",
+       "        -0.61747251, -0.1379691 , -0.12652836,  2.02513396, -0.76365484,\n",
+       "         0.46773233, -0.37114917, -0.0225672 ]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "          tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -497,16 +497,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.18717509, -1.13245193, -2.52229744])"
+       "array([-1.23581815, -1.55006765, -2.16324157])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,24 +517,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.13436625,  0.        ,  0.79723613, -1.37919061,  0.        ,\n",
-       "         0.        ,  0.59539487,  0.        ,  0.        ,  0.        ,\n",
-       "         0.        ,  1.0694832 ,  2.32098364],\n",
-       "       [-1.35875765, -0.32683693, -1.14239746,  0.6864539 ,  0.        ,\n",
-       "         0.06930373,  0.67975579,  0.10279708,  0.        , -1.90581578,\n",
-       "         0.90729652,  0.        , -2.07025126],\n",
-       "       [ 0.13821619,  0.1311182 ,  0.42639177,  0.        ,  0.        ,\n",
-       "         0.        , -2.38590563,  0.        ,  0.        ,  1.47293043,\n",
-       "        -0.86049005, -0.60210613,  0.        ]])"
+       "array([[ 1.00245814,  0.23805426,  0.55447017, -1.27907084, -0.11421852,\n",
+       "         0.        ,  0.75016621,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  1.17598257,  2.47743112],\n",
+       "       [-1.4135733 , -0.49126129, -0.99132137,  0.57146588,  0.        ,\n",
+       "         0.        ,  0.51360929,  0.26326905,  0.02171131, -1.98922656,\n",
+       "         1.30055107,  0.        , -2.00290959],\n",
+       "       [ 0.06074552,  0.20762036,  0.3272259 ,  0.        ,  0.        ,\n",
+       "         0.        , -2.07800723,  0.        ,  0.        ,  1.502394  ,\n",
+       "        -1.55109634, -0.53140811,  0.        ]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,22 +547,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 正则化效果图（省略）"
+    "### 正则化效果图（暂略）"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 序列特征选择算法SBS"
+    "### 序列特征选择算法SBS (暂略)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.base import clone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
   }
  ],
  "metadata": {
