--- a/learnsklearn/数据预处理-winedataset.ipynb
+++ b/learnsklearn/数据预处理-winedataset.ipynb
@@ -554,7 +554,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 序列特征选择算法SBS (暂略)"
+    "### 特征选择算法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SBS (暂略)"
    ]
   },
   {
@@ -563,33 +570,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.base import clone"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import combinations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.base import clone\n",
+    "from itertools import combinations\n",
+    "import numpy as np\n",
     "from sklearn.metrics import accuracy_score"
    ]
   }
